--- a/platformio.ini
+++ b/platformio.ini
@@ -2,7 +2,7 @@
 ;
 ;   Build options: build flags, source filter
 ;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
+;   Library options: dependencies, extra library storage
 ;   Advanced options: extra scripting
 ;
 ; Please visit documentation for the other options and examples
@@ -17,3 +17,4 @@ lib_deps =
   Time
   Timezone
   TinyGPSPlus
+  Adafruit DotStar
